--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,12 @@ services:
           "spring.jpa.hibernate.ddl-auto" : "update"
         }'
       depends_on:
-        postgresdb:
+        postgresdb-bank:
           condition: service_healthy
       networks:
         - Banking-network
 
-  postgresdb:
+  postgresdb-bank:
     image: postgres:latest
     container_name: postgresdb
     environment:
@@ -43,7 +43,7 @@ services:
     image: dpage/pgadmin4
     container_name: pgadmin
     depends_on:
-      - postgresdb
+      - postgresdb-bank
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
